--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
+alembic==1.7.3
+Flask_Migrate==3.1.0
 WTForms==2.3.3
+Flask_Login==0.5.0
 Flask_WTF==0.15.1
+Werkzeug==2.0.1
 Flask==2.0.1
+Flask_Bootstrap==3.3.7.1
+SQLAlchemy==1.4.25
+Flask_SQLAlchemy==2.5.1
